// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiRadioGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiRadioGroup props idSelected is rendered 1`] = `
<div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      checked=""
      class="wuiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`WuiRadioGroup props legend is rendered 1`] = `
<fieldset>
  <legend
    class="wuiFormLegend"
  >
    A legend
  </legend>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</fieldset>
`;

exports[`WuiRadioGroup props name is propagated to radios 1`] = `
<div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="1"
      name="radiogroupname"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="2"
      name="radiogroupname"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`WuiRadioGroup props options are rendered 1`] = `
<div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      disabled=""
      id="2"
      type="radio"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`WuiRadioGroup props value is propagated to radios 1`] = `
<div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="1"
      name="radiogroupname"
      type="radio"
      value="Value #1"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="wuiRadio wuiRadioGroup__item"
  >
    <input
      class="wuiRadio__input"
      id="2"
      name="radiogroupname"
      type="radio"
      value="Value #2"
    />
    <div
      class="wuiRadio__circle"
    />
    <label
      class="wuiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;
